<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonClear">C</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">X</string>
    <string name="buttonPlus">+</string>
    <string name="butttonMinus">-</string>
    <string name="buttonEqual">=</string>
    <string name="buttonComa">.</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button10">CE</string>
    <string name="butonMod">MOD</string>
    <string name="buttonGold">GOLD</string>



</resources>
