<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <EditText
            android:id="@+id/myResult"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="right|center"
            android:paddingRight="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="50px"
            android:backgroundTint="@color/colorPrimary"
            android:hint="0"
            android:textCursorDrawable="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/button10"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonF1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/butonMod"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonF2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/buttonGold"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/buttonMultiply"
                android:textColor="@color/text"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button7"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button8"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button9"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/buttonDivide"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button4"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button5"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button6"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/butttonMinus"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button1"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button2"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button3"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/buttonPlus"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonComa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/buttonComa"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/button0"
                android:textColor="@color/text"
                android:textSize="30sp" />


            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_button"
                android:text="@string/buttonClear"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/function_button"
                android:text="@string/buttonEqual"
                android:textColor="@color/text"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>